<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.your_availability.YourAvailabilityActivity">

    <RelativeLayout
        android:id="@+id/relToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_pink"
        android:padding="@dimen/_8sdp">

        <ImageView
            android:id="@+id/ivBackButton"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_back_arrow"
            android:visibility="gone"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/tvToolbarTitle"
            style="@style/HeadingType2BlackFont"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:drawablePadding="@dimen/_4sdp"
            android:text="@string/your_availability"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relToolbar"
        android:orientation="vertical">

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_32sdp"
            android:background="@color/gray"/>

        <com.prolificinteractive.materialcalendarview.MaterialCalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view1"
            android:layout_marginTop="@dimen/_4sdp"
            app:mcv_calendarMode="week"
            app:mcv_dateTextAppearance="@style/CustomDateLabelAppearance"
            app:mcv_firstDayOfWeek="monday"
            app:mcv_headerTextAppearance="@style/CustomHeaderLabelAppearance"
            app:mcv_selectionColor="@color/app_black"
            app:mcv_showOtherDates="all"
            app:mcv_selectionMode="multiple"
            app:mcv_weekDayLabels="@array/calender_day_label"
            app:mcv_weekDayTextAppearance="@style/CustomDaysLabelAppearance" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_below="@+id/calendarView"
            android:background="@color/gray"/>


        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tvContinue"
            android:layout_below="@+id/view2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/_16sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/app_black"
                    android:textSize="@dimen/_14sdp"
                    android:text="@string/morning_availability"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/morningSlotRecyclerview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/app_black"
                    android:textSize="@dimen/_14sdp"
                    android:layout_marginVertical="@dimen/_12sdp"
                    android:text="@string/afternoon_availability"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/afternoonSlotRecyclerview"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/app_black"
                    android:textSize="@dimen/_14sdp"
                    android:layout_marginVertical="@dimen/_12sdp"
                    android:text="@string/evening_availability"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/eveningSlotRecyclerview"/>

            </LinearLayout>

        </ScrollView>

        <TextView
            android:id="@+id/tvContinue"
            style="@style/BookAppointmentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:padding="@dimen/_12sdp"
            android:textColor="@color/black"
            android:text="@string/continue_text" />

    </RelativeLayout>

</RelativeLayout>