<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.select_radius.SelectRadiusActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2">

                    <fragment
                        android:id="@+id/map"
                        android:name="com.google.android.gms.maps.SupportMapFragment"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="0dp"
                        android:layout_marginBottom="0dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:paddingVertical="@dimen/_16sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:text="@string/select_radius"
                        android:textColor="@color/app_black"
                        android:textSize="@dimen/_12sdp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:weightSum="3">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/_1mi"
                            android:textColor="@color/app_black" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/_7mi"
                            android:textColor="@color/app_black" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:text="@string/_15mi"
                            android:textColor="@color/app_black" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_16sdp">

                        <LinearLayout
                            android:layout_width="@dimen/_5sdp"
                            android:layout_height="@dimen/_12sdp"
                            android:layout_marginStart="@dimen/_8sdp"
                            android:background="@drawable/drawable_black_rounded_corner_bg" />

                        <SeekBar
                            android:id="@+id/radiusSeekbar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="-20dp"
                            android:max="15"
                            android:maxHeight="@dimen/_6sdp"
                            android:min="1"
                            android:minHeight="@dimen/_6sdp"
                            android:progressDrawable="@drawable/seekbar_style"
                            android:thumb="@drawable/seekbar_custom_thumb" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvContinue"
                        style="@style/BookAppointmentButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginHorizontal="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_40sdp"
                        android:padding="@dimen/_12sdp"
                        android:text="@string/continue_text"
                        android:textColor="@color/black" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_pink"
        android:padding="@dimen/_8sdp">

        <ImageView
            android:id="@+id/ivBackButton"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_back_arrow"
            android:visibility="visible"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/tvToolbarTitle"
            style="@style/HeadingType2BlackFont"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:drawablePadding="@dimen/_4sdp"
            android:text="@string/select_radius"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp" />

    </RelativeLayout>

</RelativeLayout>